tests/src/frontend/syntax/invalid/name_collision_1.sk
const foo: Int = 0;
fun foo(): void {
  void
}
